# xpath-identifier

./: pyproject.toml  setup.cfg
src/xpath_identifier/: main.py
